# synapticon_ros2_control-release_v1

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  bitbucket-pipelines.yml  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  synapticon_ros2_control.xml  tracks.yaml
.github/workflows/: industrial_ci.yml
bringup/config/: single_dof.rviz  single_dof_controllers.yaml
bringup/launch/: elevated_permissions.launch.py  single_dof.launch.py
debian/: changelog  control  copyright  gbp.conf  rules
description/ros2_control/: single_dof.ros2_control.xacro
description/urdf/: single_dof_in_world.urdf.xacro  single_dof_macro.urdf.xacro
ethercat_grant/: README.md
ethercat_grant/src/: ethercat_grant.cpp
include/synapticon_ros2_control/: soem_utilities.hpp  synapticon_interface.hpp  synapticon_structs.hpp
meshes/: flywheel.stl  motor.stl
ros2_humble_docker/: Dockerfile  synapticon_ros2_controller_build.sh
rpm/: ros-humble-synapticon-ros2-control.spec  template.spec
soem/: ethercatconfig.c  ethercateoe.c  ethercateoe.h  ethercatmain.c  ethercatmain.h
src/: soem_utilities.cpp  synapticon_interface.cpp  torque_control_executable.cpp
